testdata/baselines/reference/submodule/compiler/jsFileCompilationHeritageClauseSyntaxOfClass.errors.txt
a.js(1,8): error TS8005: 'implements' clauses can only be used in TypeScript files.


==== a.js (1 errors) ====
    class C implements D { }
           ~~~~~~~~~~~~~
!!! error TS8005: 'implements' clauses can only be used in TypeScript files.